--- a/style.css
+++ b/style.css
@@ -1,44 +1,53 @@
-body{
+body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
 }
+
+
 /*--------------Header CSS-----------------*/
-#header{
+
+#header {
     height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(img/office12.jpeg);
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(img/office12.jpeg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
 }
-.user-box{
+
+.user-box {
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     position: absolute;
 }
-.user-box img{
+
+.user-box img {
     border-radius: 50%;
     width: 250px;
     border: 2px solid #6caed5;
 }
 
-  .user-box img{
-   filter: grayscale(1);
-  }
-  .user-box img:hover{
-   filter: grayscale(0);
-   cursor: pointer;
-  }
-.user-box h1{
+.user-box img {
+    filter: grayscale(1);
+}
+
+.user-box img:hover {
+    filter: grayscale(0);
+    cursor: pointer;
+}
+
+.user-box h1 {
     color: #fff;
-    font-weight: bold; 
+    font-weight: bold;
     margin: 10px;
 }
-.user-box p{
+
+.user-box p {
     color: #fff;
 }
-.scroll-btn{
+
+.scroll-btn {
     bottom: 5px;
     position: absolute;
     left: 50%;
@@ -47,77 +56,97 @@ body{
     padding: 10px 10px 20px;
     border-radius: 30px;
 }
-.scroll-bar span{
+
+.scroll-bar span {
     border: 2px solid blue;
     font-size: 10px;
     border-radius: 30px;
 }
-.scroll-bar{
-    animation: mover 1s infinite alternate; 
+
+.scroll-bar {
+    animation: mover 1s infinite alternate;
 }
-@keyframes mover 
-{
-    0%{transform: translateY(0);}
-    100%{transform: translateY(10px);}
+
+@keyframes mover {
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(10px);
+    }
 }
+
+
 /*--------------About--------------*/
-.about{
+
+.about {
     padding-top: 100px;
     margin-bottom: -130px;
 }
-.profile-img{
+
+.profile-img {
     height: 330px;
     width: 300px;
     border: 10px solid rgb(78, 161, 230);
     border-radius: 50%;
 }
-.nav-bar{
+
+.nav-bar {
     top: 0;
     position: sticky;
     z-index: 2;
 }
-.navbar{
+
+.navbar {
     background-color: #000;
 }
-.navbar-brand{
+
+.navbar-brand {
     font-family: lucida;
     color: #fff;
 }
-.nav-bar .fa-bars{
+
+.nav-bar .fa-bars {
     font-size: 35px;
     color: #fff;
 }
-.navbar-toggler{
+
+.navbar-toggler {
     outline: none !important;
 }
-.navbar-nav{
+
+.navbar-nav {
     float: right;
     text-align: right;
 }
-.nav-link{
+
+.nav-link {
     color: #fff !important;
 }
- 
+
+
 /*--------------Resume-------------*/
- 
- 
-.timeline li{
+
+.timeline li {
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: 20px;
     background: #fff;
 }
-.timeline li h4{
+
+.timeline li h4 {
     background-color: #000;
     padding: 5px 0 5px 20px;
     color: #fff;
     font-size: 15px;
 }
-.timeline li h4 span{
+
+.timeline li h4 span {
     font-weight: bold;
     color: #ccc;
 }
-.timeline li:before{
+
+.timeline li:before {
     content: '';
     background: #fff;
     display: inline-block;
@@ -130,84 +159,103 @@ body{
     z-index: 1;
 }
 
+
 /*----------------Services-------------------*/
-.container2{
+
+.container2 {
     display: flex;
-    justify-content: space-between;
-    
+    justify-content: space-evenly;
+}
+
+.web {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 100px;
 }
 
 
 /*------------Contact----------------*/
-.contact{
+
+.contact {
     padding-top: 50px;
-    background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(img/contact.jpeg);
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(img/contact.jpeg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
     color: #fff;
 }
-.contact .row{
+
+.contact .row {
     padding: 30px 0;
     font-size: 22px;
 }
-.contact .col-md-4 .fa{
+
+.contact .col-md-4 .fa {
     padding: 10px;
     font-size: 30px;
 }
-.contact .btn{
+
+.contact .btn {
     padding: 10px 25px 10px 25px;
     margin: 5px;
     border-radius: 30px;
     border: 2px solid #fff;
     background: transparent;
-
 }
-.contact .btn:focus{
+
+.contact .btn:focus {
     box-shadow: none !important;
 }
-.contact .btn:hover{
+
+.contact .btn:hover {
     border: 2px solid #000 !important;
     background: #000 !important;
-    transition: 0.6s;  
+    transition: 0.6s;
 }
-.contact .btn .fa{
+
+.contact .btn .fa {
     margin-right: 10px;
 }
-.footer{
+
+.footer {
     background: #000;
     height: 80px;
     margin-top: 50px;
     color: #fff;
     padding-top: 10px;
 }
-.fa-heart-o{
+
+.fa-heart-o {
     color: red;
 }
 
+
 /*----------------Social media icons-----------------*/
-.social-icons{
+
+.social-icons {
     top: 50%;
     transform: translateY(-50%);
     position: sticky;
     z-index: 1;
     width: 80px;
 }
-.social-icons ul{
+
+.social-icons ul {
     padding: initial;
 }
-.social-icons ul li{
+
+.social-icons ul li {
     height: 40px;
     width: 40px;
     list-style-type: none;
     padding-left: 12px;
-    padding-top:6px;
+    padding-top: 6px;
     margin-top: 5px;
     color: #fff;
     background: #000;
 }
 
-.social-icons ul li:hover{
+.social-icons ul li:hover {
     padding-left: 30px;
     width: 80px;
     transition: 1s;
